--- a/PROJETO-CLIMÁTICO/index.html
+++ b/PROJETO-CLIMÁTICO/index.html
@@ -13,17 +13,17 @@
         <main>
             <article id="header">
                 <div id="buscador">
-                    <i class="fa-solid fa-location-dot" id="icons"></i>
+                    <i class="fa-solid fa-location-dot" id="icon-location"></i>
                     <input type="search" name="ibuscador" id="buscador">
-                    <i class="fa-solid fa-xmark" id="icons"></i>
-                    <i class="fa-solid fa-magnifying-glass" id="icons"></i>
+                    <i class="fa-solid fa-xmark" id="icon-x"></i>
+                    <i class="fa-solid fa-magnifying-glass" id="icon-search"></i>
                 </div>
             </article>
 
             <article id="principal">
                 <div id="local-horario">
                     <div id="local">Cedro, PE</div> <!-- H1 local -->
-                    <div id="horario">12:33</div> <!-- horario atual-->
+                    <div id="horario"></div> <!-- horario atual-->
                 </div> 
                 <div id="clima">
                     <img src="img/nublado.png" alt="" id="imagem"> <!--IMG-->
